--- a/files/index.css
+++ b/files/index.css
@@ -9,3 +9,13 @@ body, html {
 h1 {
   font-size: 25px;
 }
+
+.middle {
+  position: absolute;
+  margin-left: 690px;
+  margin-top: 230px;
+  color: white;
+  z-index: 10;
+  font-family: 'Open Sans', sans-serif;
+}
+    
