--- a/files/index.css
+++ b/files/index.css
@@ -20,6 +20,12 @@ h2 {
   text-decoration: none;
 }
 
+h3 {
+  font-size: 40px;
+  font-family: 'Ubuntu', sans-serif;
+  text-decoration: none;
+}
+
 .middle {
   position: absolute;
   margin-left: 715px;
@@ -40,4 +46,28 @@ h2 {
   text-decoration: none;
 }
 
-a { color: inherit; text-decoration: none; } 
+.middle3 {
+  position: absolute;
+  margin-left: 640px;
+  margin-top: 0px;
+  color: white;
+  z-index: 10;
+  font-family: 'Ubuntu', sans-serif;
+  text-decoration: none;
+}
+
+.projects {
+  position: absolute;
+  margin-left: 640px;
+  margin-top: 0px;
+  color: white;
+  z-index: 10;
+  font-family: 'Ubuntu', sans-serif;
+  text-decoration: none;
+}
+
+.photo1 {
+  
+}
+
+a { color: inherit; text-decoration: none; }
