--- a/about/about.css
+++ b/about/about.css
@@ -75,4 +75,11 @@ img {
   height: 128px;
 }
 
+.about {
+  position: absolute;
+  margin-left: 675px;
+  margin-top: 100px;
+}
+  
+
 a { color: inherit; text-decoration: none; }
