--- a/about/about.css
+++ b/about/about.css
@@ -84,7 +84,8 @@ img {
 .abouttext {
   position: absolute;
   margin-left: 785px;
-  margin-top: 75px;
+  margin-top: 150px;
+  max-width: 600px;
 }
 
 a { color: inherit; text-decoration: none; }
